--- a/Bio.html
+++ b/Bio.html
@@ -48,8 +48,8 @@
 								<h2>All about me :) </h2>
 								<ul>
 									<li>Life</li>
-									<li>Hobbies</li>							
-									
+									<li>Hobbies</li>
+
 								</ul>
 							</div>
 						</header>
@@ -59,20 +59,37 @@
 								<div class="inner">
 
 									<h3 class="major">Life</h3>
-									<p>I was born in Cambridge England, Where I grew up near a small country town on a farm then moved over to Australia when I was 6 years of age to the North West coast of Tasmania where I grew up by the ocean. Growing up in a small town called Ulverston I found myself taking up as many sports as I could. Some of these include SurfClub, Surfing, wakeboarding , Swimming, Crosscountry running, Road bike riding, Mountain biking, Skating, Cricket, AFL, Golf and Triathlons where I raced for the state. Although I found myself doing multiple sports I found myself becoming a workaholic and took on multiple jobs as I got older where you can find them in my CV. </p>
-									<p>Once I had turned 18 and finished school I left to go travelling, what may have initially meant a 6 months holiday turned into 3 years due to always finding work wherever I went. This allowed me to travel to  the southern states of America,  go camping and hiking in the Canadian Rockies. Sightseeing in London and Amsterdam, riding my bike cycle around the British Isles, Kitesurfing in Egypt, taking a cruise through Finland, Russia and Estonia. While also hitchhiking through Iceland, Germany, Norway, Denmark, Sweden, Morocco and Spain. </p>
-									<p>With the Covid 19 pandemic bringing me back home, I was able to have the time to learn how to code as I had always wanted to but never had the time or thought that I was capable of learning how to. So after learning how to become a junior full stack developer I decided to go to Uni to have the possibility to keep on learning in this area. Now I am a second year student at the University of Wollongong studying a Bachelor of Computer Science.</p>
-									
+									<p>
+										Born in Cambridge, England, and raised on a farm near a quaint town, I migrated to Tasmania's northwest coast at six. In the coastal town of Ulverstone,
+										I embraced a plethora of sports, excelling to state-level triathlons. Alongside sports, I juggled multiple jobs, detailed in my CV. Post-school,
+										wanderlust led me on a three-year global odyssey, working across continents—from the Southern US to the Canadian Rockies, European capitals to African deserts, and more.
+										The pandemic rerouted me home, giving me the chance to pursue a latent passion for coding. Now, I'm a fourth-year Computer Science student at the University of Wollongong,
+										expanding my tech acumen through internships, international courses, and a semester abroad in South Korea.
+									</p>
+
 									<h3 class="major">Hobbies</h3>
 									<p>Growing up I may have had many hobbies from all the sports I did as well as being a novice photographer. Now when I have free time away from the computer, I enjoy:</p>
+									<div class="hobbies-list">
 									<ul>
 										<li>Surfing</li>
-										<li>Running </li>
-										<li>Golf </li>
+										<li>Skiing</li>
+										<li>Snowboarding</li>
+										<li>Wakeboarding</li>
+										<li>Triathlons</li>
+										<li>AFL</li>
+										<li>Cricket</li>
+										<li>Skating</li>
+										<li>MTB</li>
+										<li>Road bike riding</li>
+										<li>Diving</li>
+										<li>Running</li>
+										<li>Golf</li>
+										<li>Tennis</li>
 										<li>Camping</li>
 										<li>Overnight hikes</li>
-									</ul>	
-								</div>
+									</ul>
+									</div>
+
 							</div>
 
 					</section>
